# icrl-generator

./: .gitignore  Dockerfile  LICENSE  README.md  examples.csv  image-prompt.txt  pyproject.toml
.github/workflows/: publish.yml  publish_docker.yml
example_batch_output/: 2025_07_19_image_prompt.txt  2025_07_20_image_prompt.txt
icrl_generator/: __init__.py  __main__.py  generate.py
icrl_generator/prompts/: image_gen_system.txt  image_gen_user.txt
